--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -11,6 +11,18 @@
 
 <body>
   <div class="container">
+
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="container-fluid">
+        <a href="/" class="navbar-brand">Superlists</a>
+        <form action="#" class="navbar-form navbar-right" method="POST">
+          <span>Enter email to log in:</span>
+          <input type="text" class="form-control" name="email" />
+          {% csrf_token %}
+        </form>
+      </div>
+    </nav>
+
     <div class="row">
       <div class="col-md-6 col-md-offset-3 jumbotron">
         <div class="text-center">
@@ -27,12 +39,14 @@
         </div>
       </div>
     </div>
+
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         {% block table %} {% endblock %}
       </div>
     </div>
   </div>
+
   <script src="/static/jquery-3.2.1.min.js"></script>
   <script src="/static/list.js"></script>
   <script>
